rabbit-mq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file C:\Users\Artyom\Documents\outsourcing-platform\OutsourcePlatformApp\docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit-mq
  name: rabbit-mq
  namespace: utyata-project
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbit-mq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file C:\Users\Artyom\Documents\outsourcing-platform\OutsourcePlatformApp\docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: rabbit-mq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              value: guest
            - name: RABBITMQ_DEFAULT_USER
              value: guest
          image: rabbitmq:management
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file C:\Users\Artyom\Documents\outsourcing-platform\OutsourcePlatformApp\docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit-mq
  name: rabbit-mq
  namespace: utyata-project
spec:
  ports:
    - name: "amqp"
      port: 5672
      targetPort: 5672
    - name: "http"
      port: 15672
      targetPort: 15672
  selector:
    io.kompose.service: rabbit-mq
status:
  loadBalancer: {}
